
* Less waste of vertical space via negative line spacing (see Global
Options / Text Area).


*** Pure ***

* Proof methods with explicit instantiation ("rule_tac", "subgoal_tac"
etc.) allow an optional context of local variables ('for' declaration):
these variables become schematic in the instantiated theorem. This
behaviour is analogous to 'for' in attributes "where" and "of".

* Command "class_deps" takes optional sort arguments constraining
the search space.

* Lexical separation of signed and unsigend numerals: categories "num"
and "float" are unsigend.  INCOMPATIBILITY: subtle change in precedence
of numeral signs, particulary in expressions involving infix syntax like
"(- 1) ^ n".

* Old inner token category "xnum" has been discontinued.  Potential
INCOMPATIBILITY for exotic syntax: may use mixfix grammar with "num"
token category instead.


*** HOL ***

* New proof method "rewrite" (in ~~/src/HOL/Library/Rewrite) for
  single-step rewriting with subterm selection based on patterns.

* The functions "sin" and "cos" are now defined for any "'{real_normed_algebra_1,banach}"
  type, so in particular on "real" and "complex" uniformly.
  Minor INCOMPATIBILITY: type constraints may be needed.

* New library of properties of the complex transcendental functions sin, cos, tan, exp,
  ported from HOL Light.

* The factorial function, "fact", now has type "nat => 'a" (of a sort that admits
  numeric types including nat, int, real and complex. INCOMPATIBILITY:
  an expression such as "fact 3 = 6" may require a type constraint, and the combination
  "real (fact k)" is likely to be unsatisfactory. If a type conversion is still necessary,
  then use "of_nat (fact k)" or "real_of_nat (fact k)".

* removed functions "natfloor" and "natceiling",
  use "nat o floor" and "nat o ceiling" instead.
  A few of the lemmas have been retained and adapted: in their names
  "natfloor"/"natceiling" has been replaced by "nat_floor"/"nat_ceiling".
